fix hero bg on safari

--- a/style-guide/components/03-organisms/hero/hero.css
+++ b/style-guide/components/03-organisms/hero/hero.css
@@ -2,7 +2,6 @@
 	background-image: var(--_bg-url);
 	background-repeat: no-repeat;
 	background-position: center center;
-	background-attachment: fixed;
 	background-size: cover;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
